# satsuma

./: Cargo.toml
src/application/: add_participant_to_conversation.rs  add_participants_to_chat_container.rs  change_name.rs  chat_session_list.rs  conversation_list.rs  create_conversation.rs  create_direct_chat.rs  get_chat_user_list.rs  get_conversation_messages.rs  get_profile.rs  load_messages.rs  mod.rs  modify_participant_roles.rs  register_user.rs  remove_participant_from_conversation.rs  remove_participants_from_chat_container.rs  search_chat.rs  send_message.rs
src/domain/: chat_container.rs  chat_session.rs  conversation.rs  event.rs  event_kind.rs  generate_event_id.rs  message.rs  mod.rs  user.rs
src/infrastructure/: chat_container_repository.rs  chat_session_repository.rs  conversation_repository.rs  key_provider.rs  local_storage.rs  message_repository.rs  mod.rs  nostr_event.rs  profile_repository.rs  relay_manager.rs  relay_publisher.rs  user_repository.rs
tests/: conversation_test.rs  domain_tests.rs  message_test.rs  register_user_test.rs  user_test.rs
tests/application/: add_participant_to_conversation_test.rs  add_participants_to_chat_container_test.rs  change_name_test.rs  chat_session_list_test.rs  chat_user_list_test.rs  conversation_list_test.rs  create_conversation_test.rs  create_direct_chat_test.rs  create_general_chat_test.rs  find_messages_test.rs  get_chat_user_list_test.rs  get_conversation_messages_test.rs  get_profile_test.rs  load_messages_test.rs  mod.rs  modify_participant_roles_test.rs  register_user_test.rs  search_chat_test.rs  (+2 more)
(+38 files in other folders)
