[package]
name = "satsuma"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
secp256k1 = "0.31.1"
async-trait = "0.1.89"
thiserror = "2.0.17"

[dev-dependencies]
rstest = "0.26.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
