[package]
name = "satsuma"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
async-trait = "0.1.89"
thiserror = "2.0.17"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }

[dev-dependencies]
rstest = "0.26.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
